--- a/app/src/sass/components/_variables.scss
+++ b/app/src/sass/components/_variables.scss
@@ -7,6 +7,7 @@ $accent-color: #0085b6;
 $accent-color-alpha: #0085b677;
 $accent-active-color: #0bb4c1;
 $shadow-color: #e1e1e1;
+$subtitle-color: #7e7e7e;
 $error-color: #ff7575;
 $warning-color: #ffb482;
 $hint-color: #ffff64;
